# dagger-explorer

./: .gitignore  Cargo.toml  LICENSE  flake.nix
assets/ffmpeg/: .gitkeep
scripts/: fetch-ffmpeg.sh
src/: app.rs  fonts.rs  main.rs
src/explorer/: clipboard.rs  delete.rs  directory_loading.rs  format.rs  fs.rs  mod.rs  paths.rs  preferences.rs  settings.rs  state.rs  tab.rs  transfer.rs  view.rs
src/explorer/thumbs/: db.rs  ffmpeg.rs  generate.rs  media.rs  mod.rs  runtime.rs
src/ui/: frame.rs  mod.rs  settings_dropdown.rs  text.rs  theme.rs  title_bar.rs
src/ui/explorer/: file_panel.rs  file_view.rs  layout.rs  loading_bar.rs  mod.rs  nav_bar.rs  sidebar.rs  status_bar.rs  tab_bar.rs  toast.rs  toolbar.rs
