[package]
name = "dagger-explorer"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
chrono = "0.4"
eframe = "0.34.3"
egui = "0.34.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff", "ico"] }
jwalk = "0.8.1"
notify = "8.2.0"
rayon = "1.12.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "5.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_Shell",
] }
windows-core = "0.61"

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.9"
x11-clipboard = "0.9"
x11rb = { version = "0.13", default-features = false, features = ["allow-unsafe-code"] }
